// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GroupFooter /> matches snapshot 1`] = `
"
<div class=\\"card-footer components-grid-alertgrid-alertgroup-footer px-2 py-1\\">
  <div class=\\"mb-1\\">
    <div class=\\" tooltip-trigger\\">
      <div class=\\"mb-1 p-1 bg-light d-inline-block rounded components-grid-annotation text-break mw-100\\">
        <span class=\\"cursor-pointer\\">
          <svg
            aria-hidden=\\"true\\"
            focusable=\\"false\\"
            data-prefix=\\"fas\\"
            data-icon=\\"angle-right\\"
            class=\\"svg-inline--fa fa-angle-right me-1 text-muted\\"
            role=\\"img\\"
            xmlns=\\"http://www.w3.org/2000/svg\\"
            viewbox=\\"0 0 320 512\\"
          >
            <path
              fill=\\"currentColor\\"
              d=\\"M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z\\"
            >
            </path>
          </svg>
          <span class=\\"text-muted\\">
            summary:
          </span>
        </span>
        <span class=\\"Linkify\\">
          <span>
            This is summary
          </span>
        </span>
      </div>
    </div>
    <div class=\\" tooltip-trigger\\">
      <div class=\\"mb-1 p-1 bg-light d-inline-block rounded components-grid-annotation text-break mw-100 cursor-pointer\\">
        <svg
          aria-hidden=\\"true\\"
          focusable=\\"false\\"
          data-prefix=\\"fas\\"
          data-icon=\\"angle-left\\"
          class=\\"svg-inline--fa fa-angle-left me-1\\"
          role=\\"img\\"
          xmlns=\\"http://www.w3.org/2000/svg\\"
          viewbox=\\"0 0 320 512\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z\\"
          >
          </path>
        </svg>
        hidden
      </div>
    </div>
  </div>
  <div class=\\" tooltip-trigger\\">
    <span class=\\"components-label badge bg-default components-label-dark components-label-with-hover components-label-without-select\\">
      <span class=\\"components-label-name\\">
        label1:
      </span>
      <span class=\\"components-label-value\\">
        foo
      </span>
    </span>
  </div>
  <div class=\\" tooltip-trigger\\">
    <span class=\\"components-label badge bg-default components-label-dark components-label-with-hover components-label-without-select\\">
      <span class=\\"components-label-name\\">
        label2:
      </span>
      <span class=\\"components-label-value\\">
        bar
      </span>
    </span>
  </div>
  <div class=\\" tooltip-trigger\\">
    <span class=\\"components-label badge bg-default components-label-dark components-label-with-hover components-label-without-select\\">
      <span class=\\"components-label-name\\">
        @receiver:
      </span>
      <span class=\\"components-label-value\\">
        by-name
      </span>
    </span>
  </div>
  <a
    href=\\"http://link.example.com\\"
    target=\\"_blank\\"
    rel=\\"noopener noreferrer\\"
    class=\\"components-label components-label-with-hover badge border components-grid-annotation-link\\"
  >
    <svg
      aria-hidden=\\"true\\"
      focusable=\\"false\\"
      data-prefix=\\"fas\\"
      data-icon=\\"up-right-from-square\\"
      class=\\"svg-inline--fa fa-up-right-from-square \\"
      role=\\"img\\"
      xmlns=\\"http://www.w3.org/2000/svg\\"
      viewbox=\\"0 0 448 512\\"
    >
      <path
        fill=\\"currentColor\\"
        d=\\"M288 32c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9L306.7 128 169.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L352 173.3l41.4 41.4c9.2 9.2 22.9 11.9 34.9 6.9s19.8-16.6 19.8-29.6V64c0-17.7-14.3-32-32-32H288zM80 64C35.8 64 0 99.8 0 144V400c0 44.2 35.8 80 80 80H336c44.2 0 80-35.8 80-80V320c0-17.7-14.3-32-32-32s-32 14.3-32 32v80c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16V144c0-8.8 7.2-16 16-16h80c17.7 0 32-14.3 32-32s-14.3-32-32-32H80z\\"
      >
      </path>
    </svg>
    link
  </a>
</div>
"
`;

exports[`<GroupFooter /> mathes snapshot when silence is rendered 1`] = `
"
<div class=\\"card-footer components-grid-alertgrid-alertgroup-footer px-2 py-1\\">
  <div class=\\"mb-1\\">
    <div class=\\" tooltip-trigger\\">
      <div class=\\"mb-1 p-1 bg-light d-inline-block rounded components-grid-annotation text-break mw-100\\">
        <span class=\\"cursor-pointer\\">
          <svg
            aria-hidden=\\"true\\"
            focusable=\\"false\\"
            data-prefix=\\"fas\\"
            data-icon=\\"angle-right\\"
            class=\\"svg-inline--fa fa-angle-right me-1 text-muted\\"
            role=\\"img\\"
            xmlns=\\"http://www.w3.org/2000/svg\\"
            viewbox=\\"0 0 320 512\\"
          >
            <path
              fill=\\"currentColor\\"
              d=\\"M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z\\"
            >
            </path>
          </svg>
          <span class=\\"text-muted\\">
            summary:
          </span>
        </span>
        <span class=\\"Linkify\\">
          <span>
            This is summary
          </span>
        </span>
      </div>
    </div>
    <div class=\\" tooltip-trigger\\">
      <div class=\\"mb-1 p-1 bg-light d-inline-block rounded components-grid-annotation text-break mw-100 cursor-pointer\\">
        <svg
          aria-hidden=\\"true\\"
          focusable=\\"false\\"
          data-prefix=\\"fas\\"
          data-icon=\\"angle-left\\"
          class=\\"svg-inline--fa fa-angle-left me-1\\"
          role=\\"img\\"
          xmlns=\\"http://www.w3.org/2000/svg\\"
          viewbox=\\"0 0 320 512\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z\\"
          >
          </path>
        </svg>
        hidden
      </div>
    </div>
  </div>
  <div class=\\" tooltip-trigger\\">
    <span class=\\"components-label badge bg-default components-label-dark components-label-with-hover components-label-without-select\\">
      <span class=\\"components-label-name\\">
        label1:
      </span>
      <span class=\\"components-label-value\\">
        foo
      </span>
    </span>
  </div>
  <div class=\\" tooltip-trigger\\">
    <span class=\\"components-label badge bg-default components-label-dark components-label-with-hover components-label-without-select\\">
      <span class=\\"components-label-name\\">
        label2:
      </span>
      <span class=\\"components-label-value\\">
        bar
      </span>
    </span>
  </div>
  <div class=\\" tooltip-trigger\\">
    <span class=\\"components-label badge bg-default components-label-dark components-label-with-hover components-label-without-select\\">
      <span class=\\"components-label-name\\">
        @receiver:
      </span>
      <span class=\\"components-label-value\\">
        by-name
      </span>
    </span>
  </div>
  <a
    href=\\"http://link.example.com\\"
    target=\\"_blank\\"
    rel=\\"noopener noreferrer\\"
    class=\\"components-label components-label-with-hover badge border components-grid-annotation-link\\"
  >
    <svg
      aria-hidden=\\"true\\"
      focusable=\\"false\\"
      data-prefix=\\"fas\\"
      data-icon=\\"up-right-from-square\\"
      class=\\"svg-inline--fa fa-up-right-from-square \\"
      role=\\"img\\"
      xmlns=\\"http://www.w3.org/2000/svg\\"
      viewbox=\\"0 0 448 512\\"
    >
      <path
        fill=\\"currentColor\\"
        d=\\"M288 32c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9L306.7 128 169.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L352 173.3l41.4 41.4c9.2 9.2 22.9 11.9 34.9 6.9s19.8-16.6 19.8-29.6V64c0-17.7-14.3-32-32-32H288zM80 64C35.8 64 0 99.8 0 144V400c0 44.2 35.8 80 80 80H336c44.2 0 80-35.8 80-80V320c0-17.7-14.3-32-32-32s-32 14.3-32 32v80c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16V144c0-8.8 7.2-16 16-16h80c17.7 0 32-14.3 32-32s-14.3-32-32-32H80z\\"
      >
      </path>
    </svg>
    link
  </a>
  <div class=\\"components-grid-alertgrid-alertgroup-shared-silence rounded-0 border-0\\">
    <div class=\\"card my-1 components-managed-silence\\">
      <div class=\\"card-header rounded-0 border-bottom-0 px-2\\">
        <div class=\\"d-flex flex-row\\">
          <div class=\\"flex-shrink-0 flex-grow-0\\">
            <svg
              aria-hidden=\\"true\\"
              focusable=\\"false\\"
              data-prefix=\\"fas\\"
              data-icon=\\"bell-slash\\"
              class=\\"svg-inline--fa fa-bell-slash text-muted\\"
              role=\\"img\\"
              xmlns=\\"http://www.w3.org/2000/svg\\"
              viewbox=\\"0 0 640 512\\"
            >
              <path
                fill=\\"currentColor\\"
                d=\\"M38.8 5.1C28.4-3.1 13.3-1.2 5.1 9.2S-1.2 34.7 9.2 42.9l592 464c10.4 8.2 25.5 6.3 33.7-4.1s6.3-25.5-4.1-33.7l-87.5-68.6c.5-1.7 .7-3.5 .7-5.4c0-27.6-11-54.1-30.5-73.7L512 320c-20.5-20.5-32-48.3-32-77.3V208c0-77.4-55-142-128-156.8V32c0-17.7-14.3-32-32-32s-32 14.3-32 32V51.2c-42.6 8.6-79 34.2-102 69.3L38.8 5.1zM160 242.7c0 29-11.5 56.8-32 77.3l-1.5 1.5C107 341 96 367.5 96 395.2c0 11.5 9.3 20.8 20.8 20.8H406.2L160 222.1v20.7zM384 448H320 256c0 17 6.7 33.3 18.7 45.3s28.3 18.7 45.3 18.7s33.3-6.7 45.3-18.7s18.7-28.3 18.7-45.3z\\"
              >
              </path>
            </svg>
          </div>
          <div class=\\"mx-2 flex-shrink-1 flex-grow-1 mw-1p\\">
            <div class=\\"components-managed-silence-comment text-truncate overflow-hidden\\">
              Mocked Silence
            </div>
            <div class=\\"components-managed-silence-cite mt-1 d-flex flex-row\\">
              <span class=\\"text-muted text-truncate overflow-hidden me-2\\">
                — me@example.com
              </span>
              <div class=\\"d-flex flex-row justify-content-end flex-grow-1\\">
                <span class=\\"badge bg-danger components-label\\">
                  Expired 14 hours ago
                </span>
              </div>
            </div>
          </div>
          <div class=\\"flex-shrink-0 flex-grow-0\\">
            <div class=\\"d-flex flex-column flex-sm-row justify-content-between align-items-center\\">
              <span class=\\"badge components-label with-click\\">
                <svg
                  aria-hidden=\\"true\\"
                  focusable=\\"false\\"
                  data-prefix=\\"fas\\"
                  data-icon=\\"chevron-down\\"
                  class=\\"svg-inline--fa fa-chevron-down fa-rotate-180 m-auto text-muted cursor-pointer\\"
                  role=\\"img\\"
                  xmlns=\\"http://www.w3.org/2000/svg\\"
                  viewbox=\\"0 0 512 512\\"
                  style=\\"transition: transform 0.25s ease-in-out;\\"
                >
                  <path
                    fill=\\"currentColor\\"
                    d=\\"M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z\\"
                  >
                  </path>
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div class=\\"progress silence-progress mx-2 mb-1\\">
        <div
          class=\\"progress-bar bg-danger\\"
          role=\\"progressbar\\"
          style=\\"width: 1500%;\\"
          aria-valuenow=\\"1500\\"
          aria-valuemin=\\"0\\"
          aria-valuemax=\\"100\\"
        >
        </div>
      </div>
    </div>
  </div>
</div>
"
`;
